--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-simple-starter",
+  "name": "react-redux-material",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "Simple starter package for Redux with React Material Design and Babel support",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:sirJconny/React-REDUX-Material.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
@@ -31,8 +31,8 @@
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "material-ui": "^0.15.4",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "*",
+    "react-dom": "*",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "react-tap-event-plugin": "^1.0.0",
